--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -2832,9 +2832,13 @@ s3_Scenario_GettingStarted:
           github: javav2/example_code/s3
           sdkguide:
           excerpts:
-            - description:
+            - description: A scenario example. 
               snippet_tags:
                 - s3.java2.s3_scenario.main
+            - description: A wrapper class that contains the operations. 
+              snippet_tags:
+                - s3.java2.s3_actions.main
+    JavaScript:    
     JavaScript:
       versions:
         - sdk_version: 3
