--- a/javascriptv3/example_code/cross-services/photo_analyzer/package.json
+++ b/javascriptv3/example_code/cross-services/photo_analyzer/package.json
@@ -1,27 +1,26 @@
 {
   "name": "@aws-doc-sdk-examples/aws-sdk-v3-cross-service-examples-photo-analyzer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
-  "repository": "git@github.com/awsdocs/aws-doc-sdk-examples/tree/master/javascriptv3/example_code/cross-services/photo-analyzer.git",
-  "author": "Brian Murray <brmur@amazon.com>, Alex Forsyth <alex-git@amazon.com>",
-  "license": "Apache 2.0",
+  "author": "Brian Murray <brmur@amazon.com>, Alex Forsyth <alex-git@amazon.com>, Corey Pyle <corepyle@amazon.com>",
+  "license": "Apache-2.0",
   "scripts": {
-    "build": "webpack ./js/index.js --mode development --target web --devtool false -o ./js/main.js",
-    "build-cdk": "aws cloudformation create-stack --stack-name STACK_NAME --template-body file://setup.yaml --capabilities CAPABILITY_IAM",
-    "test": "exit 0"
+    "dev": "npm run build && npx http-server ./dist/",
+    "build": "webpack --mode development",
+    "deploy": "./scripts/deploy.sh",
+    "destroy": "./scripts/destroy.sh"
   },
   "dependencies": {
-    "@aws-sdk/client-cognito-identity": "^3.32.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.32.0",
-    "@aws-sdk/client-iam": "^3.32.0",
-    "@aws-sdk/client-rekognition": "^3.32.0",
-    "@aws-sdk/client-s3": "^3.32.0",
-    "@aws-sdk/client-ses": "^3.32.0",
-    "jest": "^26.6.3"
+    "@aws-sdk/client-cognito-identity": "^3.637.0",
+    "@aws-sdk/client-iam": "^3.637.0",
+    "@aws-sdk/client-rekognition": "^3.637.0",
+    "@aws-sdk/client-s3": "^3.637.0",
+    "@aws-sdk/client-ses": "^3.637.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.637.0"
   },
   "devDependencies": {
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "type": "module"
 }
