JavaScript (v3): Cross - Set min engine version for node.

--- a/javascriptv3/example_code/cross-services/photo_analyzer/package.json
+++ b/javascriptv3/example_code/cross-services/photo_analyzer/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": ">=20"
+  }
 }
